--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -25,7 +25,7 @@
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}">
 					<div class="card mb-3">
-						<div class="card-header bg-info">
+						<div class="card-header bg-info-subtle">
                             <div class="row">
                                 <div class="col-2">
                                     <span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(statistic.username)})}"></span>
