bugfix language selector

--- a/src/main/resources/templates/fragments/language_selector.html
+++ b/src/main/resources/templates/fragments/language_selector.html
@@ -39,8 +39,8 @@
             </a>
         </li>
         <li>
-            <a th:href="${@languageUtil.buildUrl('se')}" class="dropdown-item language">
-                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('se')}"></span>
+            <a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language">
+                <span class="fi" th:classappend="${@countryIconUtil.cssClassFor('sv')}"></span>
                 <span th:text="' '+#{language.sv}"></span>
             </a>
         </li>
