--- a/src/main/resources/templates/fragments/profile_image.html
+++ b/src/main/resources/templates/fragments/profile_image.html
@@ -8,21 +8,10 @@
 		      'resizeDuration': 0
 		    })
 		</script>
-
-		<div th:fragment="profile_image_small(imageKey)" th:remove="tag">
-			<div th:if="${imageKey}" th:remove="tag">
-				<img th:if="${imageKey}" th:src="@{'/gallery/showthumb/' + ${imageKey}}" width="21" height="21" class="img-rounded"/>
-			</div>
-	        <span th:if="!${imageKey}" class="fas fa-user" aria-hidden="true"></span>
-		</div>
-
 		<div th:fragment="profile_image_small_with_popup(imageKey)" th:remove="tag">
-			<div th:if="${imageKey}" th:remove="tag">
-				<a th:href="@{'/gallery/show/' + ${imageKey}}" th:attr="data-lightbox=${imageKey}" class="img-link">
-					<img th:if="${imageKey}" th:src="@{'/gallery/showthumb/' + ${imageKey}}" width="30"  class="rounded float-start"/>
-				</a>
-			</div>
-	        <span th:if="!${imageKey}" class="fas fa-user" aria-hidden="true"></span>
+            <a th:href="@{'/gallery/show/' + ${imageKey}}" th:attr="data-lightbox=${imageKey}" class="img-link">
+                <img th:if="${imageKey}" th:src="@{'/gallery/showthumb/' + ${imageKey}}" width="30" alt="user profile thumb" class="rounded float-start"/>
+            </a>
 		</div>
 	</body>
 </html>
