--- a/src/main/resources/templates/imexport/import_export.html
+++ b/src/main/resources/templates/imexport/import_export.html
@@ -27,7 +27,7 @@
                             <span th:text="#{importexport.export.data}"></span>
                         </div>
                         <div class="card-body">
-                            <a class="btn btn-secondary" role="button" th:href="@{/importexport/export}">
+                            <a class="btn btn-primary" role="button" th:href="@{/importexport/export}">
                                 <i class="fas fa-download"></i>
                                 <span th:text="#{importexport.export.name}"></span>
                             </a>
