--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -6,11 +6,11 @@
 	<body>
 		<div layout:fragment="content">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <h5 th:text="#{administration.testdata.title}">Test Data Creation</h5>
                     <form id="testDataForm" th:action="@{/administration/testdata}" th:object="${testDataCommand}" action="#" method="post" role="form">
                         <div class="row mb-3">
-                            <div class="col-auto">
+                            <div class="col-12 col-sm-6">
                                 <div class="mb-3">
                                     <label for="teamBundle" class="form-label" th:text="#{testdata.teambundle}"></label><br/>
                                     <select id="teamBundle" th:field="*{teamBundle}" class="form-select">
@@ -19,40 +19,48 @@
                                     <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('teamBundle')}" th:errors="*{teamBundle}"></p>
                                 </div>
                             </div>
-                            <div class="col-auto">
+                            <div class="col-12 col-sm-6">
                                 <div class="mb-3">
                                     <label for="numberOfGroups" class="form-label" th:text="#{testdata.numberOfGroups}"></label><br/>
-                                    <input id="numberOfGroups" type="text" th:field="*{numberOfGroups}" class="form-control" required max="12"/>
+                                    <input id="numberOfGroups" type="text" th:field="*{numberOfGroups}" class="form-control" required max="12" />
                                     <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('numberOfGroups')}" th:errors="*{numberOfGroups}"></p>
                                 </div>
                             </div>
                         </div>
                         <div class="row mb-3">
-                            <div class="col-auto">
+                            <div class="col-12 col-sm-6">
                                 <div class="form-check mb-3">
                                     <input id="includeBets" type="checkbox" th:field="*{includeBets}" class="form-check-input"/>
                                     <label for="includeBets" class="form-check-label" th:text="#{testdata.includeBets}"></label>
                                 </div>
                             </div>
-                            <div class="col-auto">
+                            <div class="col-12 col-sm-6">
                                 <div class="form-check mb-3">
                                     <input id="includeResults" type="checkbox" th:field="*{includeResults}" class="form-check-input"/>
                                     <label for="includeResults" class="form-check-label" th:text="#{testdata.includeResults}"></label>
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row mb-3">
                             <div class="col-12 col-sm-6">
                                 <button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
                             </div>
                         </div>
+                        <div class="row mb-3">
+                            <div class="col-12 col-sm-6 mb-3">
+                                <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
+                            </div>
+                            <div class="col-12 col-sm-6 mb-3">
+                                <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
+                            </div>
+                        </div>
                     </form>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <h5 th:text="#{administration.testdemousers.title}">Test Demo Users</h5>
                     <form id="adminForm" th:action="@{/administration/save}" th:object="${adminFormCommand}" action="#" method="post" role="form">
                         <div class="row">
-                            <div class="col-4 mb-3">
+                            <div class="col-auto mb-3">
                                 <label class="form-label" for="numberOfTestUsers" th:text="#{administration.numberOfTestUsers.title} + ':'"></label>
                                 <input id="numberOfTestUsers" type="text" th:field="*{numberOfTestUsers}" class="form-control" />
                                 <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('numberOfTestUsers')}" th:errors="*{numberOfTestUsers}"></p>
