--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -47,10 +47,12 @@
                             </div>
                         </div>
                         <div class="row mb-3">
-                            <div class="col-12 col-sm-6 mb-3">
+                            <div class="col-12 col-sm-8">
                                 <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
                             </div>
-                            <div class="col-12 col-sm-6 mb-3">
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-12 col-sm-8">
                                 <a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
                             </div>
                         </div>
