--- a/src/main/resources/templates/admin/runtime_settings.html
+++ b/src/main/resources/templates/admin/runtime_settings.html
@@ -46,6 +46,7 @@
                     <div class="col-12 col-sm-3 mb-3">
                         <label for="favouriteCountry" class="form-label" th:text="#{administration.runtime.configuration.favouriteCountry} + ':'"></label>
                         <select id="favouriteCountry" th:field="*{runtimeSettings.favouriteCountry}" class="form-select">
+                            <option th:value="null" th:text="#{country.none}"></option>
                             <option th:each="country : ${availableCountries}" th:value="${country}" th:text="${@teamUtil.i18n(country)}"></option>
                         </select>
                         <p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('runtimeSettings.favouriteCountry')}" th:errors="*{runtimeSettings.favouriteCountry}">favouriteCountry Error</p>
