--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -8,7 +8,7 @@
         <form id="extraBetForm" th:action="@{/extrabets}" th:object="${extraBetCommand}" action="#" method="post" role="form">
 			<input type="hidden" th:field="*{extraBetId}" class="form-control" />
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6">
 					<div class="card mb-3">
 						<div class="card-header bg-success-subtle">
 							<span class="bold" th:text="#{extra_bets.finalWinner} + ':'"></span>
@@ -22,7 +22,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6">
 					<div class="card mb-3">
 						<div class="card-header bg-warning-subtle">
 							<span class="bold" th:text="#{extra_bets.semiFinalWinner} + ':'"></span>
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 				</div>
-				<div th:if="${gameForThirdAvailable}" class="col-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6" th:if="${gameForThirdAvailable}">
 					<div class="card mb-3">
 						<div class="card-header bg-info-subtle">
 							<span class="bold" th:text="#{extra_bets.thirdFinalWinner} + ':'"></span>
@@ -51,8 +51,9 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6">
 					<div class="card">
 						<div class="card-header">
                             <div class="row">
@@ -70,13 +71,13 @@
 			</div>
 
 			<div class="row mt-3">
-				<div class="col-12 col-sm-6 col-md-4" th:if="${@bettingWebUtil.isBettable()}">
+				<div class="col-12 col-sm-6" th:if="${@bettingWebUtil.isBettable()}">
 					<div class="mb-3">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 						<a href="#" th:href="@{/bet/open}" class="btn btn-light" role="button" th:text="#{button.cancel}"></a>
 					</div>
 				</div>
-                <div class="col-12 col-sm-6 col-md-4" th:if="${!@bettingWebUtil.isBettable()}">
+                <div class="col-12 col-sm-6" th:if="${!@bettingWebUtil.isBettable()}">
                     <a href="#" th:href="@{/extrabets/others}" th:text="#{extrabet.bets.of.others}"></a>
                 </div>
 			</div>
