--- a/src/main/resources/templates/info/standings.html
+++ b/src/main/resources/templates/info/standings.html
@@ -7,7 +7,7 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{standings.title}"></h1>
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4 mb-3" th:if="${not #lists.isEmpty(standingsContainer.getForGroup(group))}" th:each="group : ${standingsContainer.groups}">
+				<div class="col-12 col-sm-6 mb-3" th:if="${not #lists.isEmpty(standingsContainer.getForGroup(group))}" th:each="group : ${standingsContainer.groups}">
 					<h2 th:text="#{${group.getTitleMsgKey()}}"></h2>
 					<div class="table-responsive">
 						<table class="table small table-sm table-striped">
@@ -40,7 +40,7 @@
 						</table>
 					</div>
 				</div>
-				<div class="col-12 col-sm-6 col-md-4">
+				<div class="col-12 col-sm-6">
 					<h2 th:text="#{standings.legend}"></h2>
 					<div class="table-responsive">
 						<table class="table small table-bordered table-success">
