--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -9,7 +9,7 @@
 	<div layout:fragment="content">
 		<h1 th:text="${heading} + ' (' + ${#lists.size(allMatches)} + ')'"></h1>
 			<div class="row">
-				<div class="col-12 col-sm-6" th:each="matchCommand : ${allMatches}">
+				<div class="col-12 col-sm-8 col-md-6 col-lg-4" th:each="matchCommand : ${allMatches}">
 					<a class="anchor" th:id="${matchCommand.matchId}"></a>
 					<div class="card  mb-3">
 						<div class="card-header">
