--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -8,7 +8,7 @@
 		<div layout:fragment="content">
 			<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4" th:each="userDto : ${allUsers}">
+				<div class="col-12 col-sm-8 col-md-6 col-lg-4" th:each="userDto : ${allUsers}">
 					<div class="card mb-3">
 						<div class="card-body">
 							<div class="row">
