--- a/src/main/resources/templates/user/user_import_export.html
+++ b/src/main/resources/templates/user/user_import_export.html
@@ -7,20 +7,26 @@
 		<div layout:fragment="content">
             <h3 th:text="#{user.importexport.title}"></h3>
             <div class="row mt-3">
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-5">
                     <form th:action="@{/user/import}" th:object="${userImportExportCommand}" method="post" enctype="multipart/form-data" role="form">
                         <div class="card mb-3">
                             <div class="card-header">
                                 <span th:text="#{user.importexport.import.file}"></span>
                             </div>
                             <div class="card-body">
-                                <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-light btn-file" />
-                                <input type="submit" class="btn btn-primary mt-3" th:value="#{user.importexport.upload.button}" />
+                                <div class="row">
+                                    <div class="col-12">
+                                        <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-light btn-file" />
+                                    </div>
+                                    <div class="col-12">
+                                        <input type="submit" class="btn btn-primary mt-3" th:value="#{user.importexport.upload.button}" />
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-5">
                     <div class="card">
                         <div class="card-header">
                             <span th:text="#{user.importexport.export.users}"></span>
