--- a/src/main/resources/templates/admin/excel_export.html
+++ b/src/main/resources/templates/admin/excel_export.html
@@ -8,24 +8,24 @@
 			<h1 th:text="#{administration.excel.export.title}"></h1>
             <p th:text="#{excel.export.hint}"></p>
 			<div class="row">
-				<div class="col-12 col-sm-3 mb-3">
+				<div class="col-12 col-sm-8 col-md-6 col-lg-4 mb-3">
 					<a class="btn btn-primary" role="button" th:href="@{/excelexport/allBets}">
 						<i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.allBets}"></span>
 					</a>
 				</div>
-                <div class="col-12 col-sm-3 mb-3">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 mb-3">
                     <a class="btn btn-primary" role="button" th:href="@{/excelexport/extraBets}">
                         <i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.extraBets}"></span>
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 col-sm-3 mb-3">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 mb-3">
                     <a class="btn btn-primary" role="button" th:href="@{/excelexport/ranking}">
                         <i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.ranking}"></span>
                     </a>
                 </div>
-                <div class="col-12 col-sm-3 mb-3">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-4 mb-3">
                     <a class="btn btn-primary" role="button" th:href="@{/excelexport/pointsCount}">
                         <i class="fas fa-file-excel"></i> <span th:text="#{administration.excel.export.pointsCount}"></span>
                     </a>
